fix: WriteTextFileTool path traversal vulnerability (CRITICAL)
Add path containment to resolveFilePath() to prevent arbitrary file writes:

- Both absolute and relative paths now checked with startsWith(fallbackRootPath)
- Defense-in-depth: block sensitive system directories (/etc, /proc, /sys,
  /boot, /dev, /run, ~/.ssh) even if containment check passes
- checkPathAllowed() called before every file write in execute()
- Fix Java 8 compatibility: replace isBlank() with trim().isEmpty()
- Remove duplicate java.nio.file.Path import

Attack surface before: MCP client could write to /etc/crontab,
~/.ssh/authorized_keys, or any filesystem path via absolute path or
../../ traversal. Now restricted to fallbackRootPath (user.dir) only.